--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,14 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button id="home">Home</button>
+            <button id="menu">Menu</button>
+            <button id="about">About</button>
         </nav>
 
     </header>
     <div id="content">
-    <h1> Crusty Crab </h1>
-    <img height="400px" width="600px"  src="./images/Restaurant.png">
-    <p>The best restaurant in Bikini Bottom. Chum Bucket #1 hater.
-    </p>
+        
     </div>
 </body>
 </html>
